[tool.poetry]
name = "reactpy-github-buttons"
version = "0.0.10"
description = "ReactPy wrapper for react-github-btn"
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
reactpy = {extras = ["starlette", "testing"], version = "^1.0.2"}
# exclude = ["reactpy_github_buttons/bundle-dev.js"]

[tool.poetry.group.dev.dependencies]

asyncio = "^3.4.3"
fastapi = "^0.96.0"
playwright = "1.34.0"

pytest = "7.4.3"
pytest-asyncio = "0.23.2"
pytest-mock = "3.12.0"
pytest-rerunfailures = "13.0"
pytest-timeout = "2.2.0"
python-datestevej2608util = "2.8.2"
python-dotenv = "1.0.0"
sanic-testing = "23.6.0"
trio = "^0.23.1"
twine = "^4.0.2"

[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"
addopts = "-rsxX -vv"


[[tool.poetry.source]]
name = "pypicloud"
url = "http://debian-server:6543/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
