[tool.poetry]
name = "reactpy-github-buttons"
version = "0.0.13"
description = "ReactPy wrapper for react-github-btn"
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stevej2608/reactpy-github-buttons"
repository = "https://github.com/stevej2608/reactpy-github-buttons"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
reactpy = "^1.0.2"

[tool.poetry.group.dev.dependencies]

pytest-timeout = "2.2.0"
fastapi = "^0.109.0"
playwright = "1.41.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}

[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"
addopts = "-rsxX -vv"
# asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
